<resources>
    <string name="app_name">EjercicioPokemon</string>
    <string name="action_settings">Settings</string>
    <string name="pokemon">NAME</string>
    <string name="type">TYPE</string>
    <string name="insertar">Insert</string>
    <string name="err_selected">Debes seleccionar una foto</string>
    <string name="borrar">DELETE</string>
    <string name="edit">EDIT</string>
    <string name="btselect">Select</string>
</resources>
